deploy.yaml
# 8 limited EC2 instances.
# More EC2 instances will be error => "Resource of type 'AWS::EC2::Instance' with identifier 'i-02a8fa59debaa1806' did not stabilize."
AWSTemplateFormatVersion: "2010-09-09"
Description: 15 Windows Server on AWS Cloud

Parameters:
  InstanceType:
    Type: String
    # Default: t3.small
    Default: t3.medium
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t3.nano
      - t3.micro
      - t3.small
      - t3.medium
    Description: EC2 Instance type allowed in the lab.

  KeyName:
    Type: String
    AllowedValues:
      - x
      - vockey
    Default: x
    Description: KeyPair (use vockey for us-east-1 per lab instructions)
  WindowsAmi:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/ami-windows-latest/Windows_Server-2022-English-Full-Base
    AllowedValues:
      - /aws/service/ami-windows-latest/Windows_Server-2022-English-Full-Base
      - /aws/service/ami-windows-latest/Windows_Server-2019-English-Full-Base
Resources:
  # begin file server, dns server #1 #3
  FileServerDNSServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SMB, DNS and RDP access
      SecurityGroupIngress:
        - IpProtocol: tcp # SMB
          FromPort: 445
          ToPort: 445
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow dns tcp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # Allow dns udp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0 # RDP
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # Auto for default VPC

  FileServerDNSServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref FileServerDNSServerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: FileServerDNSServer
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          # FileServer
          Start-Transcript -Path "C:\FileServer.log" -Append
          Install-WindowsFeature -Name FS-FileServer
          New-Item -Path "C:\FileShare" -ItemType Directory -Force
          New-SmbShare -Name "PublicShare" -Path "C:\FileShare" -FullAccess "Everyone"
          echo hello > C:\FileShare\hello.txt
          Write-Host "File Server setup complete."
          Stop-Transcript

          # DNSServer
          Start-Transcript -Path "C:\DNSServer.log" -Append

          Install-WindowsFeature DNS -IncludeManagementTools

          Add-DnsServerPrimaryZone -Name "example.internal" -ZoneFile "example.internal.dns"
          Add-DnsServerPrimaryZone -Name "devspeed.com" -ZoneFile "devspeed.com.dns"

          Add-DnsServerResourceRecordA -Name 'server1' -ZoneName 'example.internal' -IPv4Address '10.0.1.10'
          Add-DnsServerResourceRecordA -Name 'console' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.11'
          Add-DnsServerResourceRecordA -Name 'go' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.29'
          Add-DnsServerResourceRecordA -Name 'blog' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.30'
          Add-DnsServerResourceRecordA -Name 'shop' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.31'
          Add-DnsServerResourceRecordA -Name 'support' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.32'
          Add-DnsServerResourceRecordA -Name 'mail' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.33'
          Add-DnsServerResourceRecordA -Name 'www' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.34'
          Add-DnsServerResourceRecordA -Name 'www2' -ZoneName 'devspeed.com' -IPv4Address '192.168.1.100'

          # For example, forwarding to Google DNS:
          # Add-DnsServerForwarder -IPAddress "8.8.8.8" -PassThru
          # Or forwarding to AWS VPC DNS (recommended for EC2). This is the Amazon-provided DNS resolver for VPCs.
          # Add-DnsServerForwarder -IPAddress "169.254.169.253" -PassThru

          New-NetFirewallRule -DisplayName "Allow DNS TCP 53" -Direction Inbound -Protocol TCP -LocalPort 53 -Action Allow
          New-NetFirewallRule -DisplayName "Allow DNS UDP 53" -Direction Inbound -Protocol UDP -LocalPort 53 -Action Allow

          Stop-Transcript
          
          # install firefox for testing proxy server
          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          choco install firefox -y
          
           
          # for client to openvpn server
          choco install openvpn -y  --package-parameters=" /AddToDesktop /Gui /GuiOnLogon /EasyRsa /DcoDriver /TapDriver /WintunDriver /OpenSSL /Service "
          $cfg = "C:\Program Files\OpenVPN\config"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/client/client1.ovpn -OutFile "$cfg\client1.ovpn"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/server/ca.crt -OutFile "$cfg\ca.crt"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/client/client1.crt -OutFile "$cfg\client1.crt"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/client/client1.key -OutFile "$cfg\client1.key"
          
          </powershell>

  # end file server, dns server

  # begin proxy server, dhcp server #2 #4
  ProxyServerDHCPServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable RDP & Squid access & dhcp
      SecurityGroupIngress:
        - IpProtocol: tcp # squid port
          FromPort: 3128
          ToPort: 3128
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # dhcp port 67
          FromPort: 67
          ToPort: 67
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # dhcp port 68
          FromPort: 68
          ToPort: 68
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # RDP
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # Auto for default VPC

  ProxyServerDHCPServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref ProxyServerDHCPServerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: ProxyServerDHCPServer
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          # proxy server
          Start-Transcript -Path "C:\ProxyServer.log" -Append
          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          choco install squid -y
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/squid.conf -OutFile "C:\Squid\etc\squid\squid.conf"
          Restart-Service squidsrv
          Write-Host "Proxy Server setup complete."
          Stop-Transcript

          # dhcp server
          Start-Transcript -Path "C:\DHCPServer.log" -Append

          # dhcp client will broadcast, and get ip, default gateway, dns,... from dhcp server
          # AWS VPC DHCP is used in EC2 instance

          # | Direction           | Port       | Purpose                       |
          # | ------------------- | ---------- | ----------------------------- |
          # | **Client → Server** | **UDP 67** | Client sends Discover/Request |
          # | **Server → Client** | **UDP 68** | Server replies with Offer/ACK |
          # So:
          # DHCP Server listens on UDP port 67
          # DHCP Client listens on UDP port 68

          # 🔎 Quick Summary
          # UDP 67 = DHCP Server Port
          # UDP 68 = DHCP Client Port
          # DHCP is entirely broadcast-based within a subnet.

          # Install DHCP Role
          Install-WindowsFeature DHCP -IncludeManagementTools

          # If in a domain (skip if standalone)
          # Add-DhcpServerInDC -DnsName "dhcpserver.example.internal" -IpAddress "10.0.1.10"

          # Create scope
          Add-DhcpServerv4Scope `
              -Name "MainScope" `
              -StartRange 10.0.1.50 `
              -EndRange 10.0.1.150 `
              -SubnetMask 255.255.255.0 `
              -State Active

          # Configure DHCP options
          Set-DhcpServerv4OptionValue -ScopeId 10.0.1.0 -Router 10.0.1.1
          Set-DhcpServerv4OptionValue -ScopeId 10.0.1.0 -DnsServer 10.0.1.10
          Set-DhcpServerv4OptionValue -ScopeId 10.0.1.0 -DnsDomain "example.internal"

          New-NetFirewallRule -DisplayName "Allow DHCP UDP 67" -Direction Inbound -Protocol UDP -LocalPort 67 -Action Allow
          New-NetFirewallRule -DisplayName "Allow DHCP UDP 68" -Direction Inbound -Protocol UDP -LocalPort 68 -Action Allow

          Stop-Transcript
          </powershell>

  # end proxy server, dhcp server

  # begin terminal server, vpn server #6 #5
  TerminalServerVPNServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow RDP access for Terminal Server, VPN
      SecurityGroupIngress:
        - IpProtocol: tcp # Allow RDP
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow VPN-SSTP
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # Allow VPN-IKEv2-500
          FromPort: 500
          ToPort: 500
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # Allow VPN-IKEv2-4500
          FromPort: 4500
          ToPort: 4500
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # Allow VPN-L2TP
          FromPort: 1701
          ToPort: 1701
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # Allow OpenVPN
          FromPort: 1194
          ToPort: 1194
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow HTTP
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # default VPC

  TerminalServerVPNServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref TerminalServerVPNServerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: TerminalServerVPNServer
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          # terminal server
          Start-Transcript -Path "C:\TerminalServer.log" -Append

          # Install Remote Desktop Session Host Role
          Install-WindowsFeature RDS-RD-Server

          # Enable Multiple Sessions
          Set-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\Terminal Server" -Name fSingleSessionPerUser -Value 0

          # Allow RDP Firewall Rule
          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"

          Write-Host "Terminal Server (RDS Session Host) setup complete."

          Stop-Transcript

          # # vpn server
          # Start-Transcript -Path "C:\VPNServer.log" -Append

          # Install-WindowsFeature RemoteAccess -IncludeManagementTools
          # Install-WindowsFeature DirectAccess-VPN -IncludeManagementTools
          # Install-WindowsFeature Routing -IncludeManagementTools

          # # Install and configure Remote Access as a VPN server
          # Install-RemoteAccess -VpnType Vpn

          # # Start the Remote Access service
          # # Set-Service RemoteAccess -StartupType Automatic
          # Start-Service RemoteAccess

          # $startIP = "10.10.10.1"
          # $endIP = "10.10.10.50"

          # netsh ras ip add range from = $startIP to = $endIP
          # netsh ras ip set addrassign method = pool

          # # Enable SSTP, IKEv2, and L2TP
          # Set-VpnServerConfiguration -SstpPorts 5 -IkeV2Ports 5 -L2tpPorts 5

          # # Set the pre-shared key
          # Set-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Services\RasMan\Parameters" -Name "ProhibitIpSec" -Value 0
          # New-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Services\RasMan\PPP" -Name "ForceEncryptedPassword" -Value 2 -PropertyType DWORD -Force

          # # Restart services
          # Restart-Service RemoteAccess

          # # SSTP (TCP 443)
          # New-NetFirewallRule -DisplayName "VPN-SSTP" -Direction Inbound -Protocol TCP -LocalPort 443 -Action Allow

          # # IKEv2 (UDP 500 and 4500)
          # New-NetFirewallRule -DisplayName "VPN-IKEv2-500" -Direction Inbound -Protocol UDP -LocalPort 500 -Action Allow
          # New-NetFirewallRule -DisplayName "VPN-IKEv2-4500" -Direction Inbound -Protocol UDP -LocalPort 4500 -Action Allow

          # # L2TP (UDP 1701)
          # New-NetFirewallRule -DisplayName "VPN-L2TP" -Direction Inbound -Protocol UDP -LocalPort 1701 -Action Allow

          # # For AD single user
          # # Set-ADUser -Identity "Administrator" -Replace @{msNPAllowDialin=$true}

          # # For local single user
          # netsh ras set user "Administrator" permit

          # # Enable IP routing
          # Set-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Services\Tcpip\Parameters" -Name "IPEnableRouter" -Value 1

          # # Get your external network adapter name (the one connected to the internet)
          # Get-NetAdapter

          # # Install NAT on the external interface
          # netsh routing ip nat install
          # netsh routing ip nat add interface name="Ethernet 3" mode=full
          # Restart-Service RemoteAccess

          # Stop-Transcript
          
          # openvpn server
          Start-Transcript -Path "C:\OpenVPNServer.log" -Append
          
          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          choco install openvpn -y  --package-parameters=" /AddToDesktop /Gui /GuiOnLogon /EasyRsa /DcoDriver /TapDriver /WintunDriver /OpenSSL /Service "
          choco install caddy 7zip -y
          
          # # ----------------------------------------------
          # # Disable all prompts
          # $env:EasyRSA_BATCH = "1"
          # $env:EasyRSA_REQ_CN = "VPN-CA"
          #
          # cd "C:\Program Files\OpenVPN\easy-rsa"
          # .\EasyRSA-Start.bat
          #
          # # Init PKI without prompt
          # ./easyrsa init-pki
          #
          # # Build CA without prompt
          # echo a | ./easyrsa build-ca nopass
          #
          # # Build server cert without prompt
          # echo yes | ./easyrsa build-server-full server nopass
          #
          # # Build client cert without prompt
          # echo yes | ./easyrsa build-client-full client1 nopass
          #
          # # Generate DH params (no prompt)
          # ./easyrsa gen-dh
          # # ----------------------------------------------
          
          
          $cfg = "C:\Program Files\OpenVPN\config"
          
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/server/dh.pem -OutFile "$cfg\dh.pem"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/server/server.crt -OutFile "$cfg\server.crt"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/server/server.key -OutFile "$cfg\server.key"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/server/ca.crt -OutFile "$cfg\ca.crt"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/openvpn/server/server.ovpn -OutFile "$cfg\server.ovpn"
          
          Set-Service -Name OpenVPNService -StartupType Automatic
          Start-Service -Name OpenVPNService
          
          New-NetFirewallRule -DisplayName "OpenVPN" -Direction Inbound -Protocol UDP -LocalPort 1194 -Action Allow
          New-NetFirewallRule -DisplayName "ShareFileOpenVPN" -Direction Inbound -Protocol TCP -LocalPort 80 -Action Allow
          
          sleep -Seconds 2
          Start-Process "C:\Program Files\OpenVPN\bin\openvpn-gui.exe"
          
          # # for client to openvpn server
          # $cfg = "C:\Program Files\OpenVPN\config"
          # Invoke-WebRequest <url> "$cfg\client1.ovpn"
          # Invoke-WebRequest <url> "$cfg\ca.crt"
          # Invoke-WebRequest <url> "$cfg\client1.crt"
          # Invoke-WebRequest <url> "$cfg\client1.key"
          
          Stop-Transcript

          </powershell>

  # end terminal server, vpn server

  # begin database server
  DatabaseServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow
      SecurityGroupIngress:
        - IpProtocol: tcp # Allow PostgreSQL
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow SQL Server
          FromPort: 1433
          ToPort: 1433
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow MongoDB
          FromPort: 27017
          ToPort: 27017
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # RDP (optional)
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # default VPC

  DatabaseInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref DatabaseServerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: Database
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          
          # postgresql
          Start-Transcript -Path "C:\postgresql.log" -Append

          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          # username postgres
          choco install postgresql11 --params '/Password:test /AllowRemote' -y
          Restart-Service postgresql-x64-11
          New-NetFirewallRule -DisplayName "Allow PostgreSQL 5432" `
            -Direction Inbound `
            -Protocol TCP `
            -LocalPort 5432 `
            -Action Allow

          Stop-Transcript
          
          # sql server
          Start-Transcript -Path "C:\sql_server.log" -Append

          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          choco install mssqlserver2014express -y
          choco install sqlserver-cmdlineutils -y

          # Get access to SqlWmiManagement DLL on the machine with SQL
          # we are on, which is where SQL Server was installed.
          # Note: This is installed in the GAC by SQL Server Setup.

          # Load the WMI assembly
          [System.Reflection.Assembly]::LoadWithPartialName('Microsoft.SqlServer.SqlWmiManagement') | Out-Null

          # Connect to local SQL Server machine
          $wmi = New-Object 'Microsoft.SqlServer.Management.Smo.Wmi.ManagedComputer' 'localhost'

          # Get TCP protocol for SQLEXPRESS
          $tcp = $wmi.ServerInstances['SQLEXPRESS'].ServerProtocols['Tcp']
          $tcp.IsEnabled = $true

          # Disable dynamic ports on each IP entry
          foreach ($ip in $tcp.IPAddresses) {
              $ip.IPAddressProperties["TcpDynamicPorts"].Value = ""
          }

          # Set static port 1433 on ALL IPs (including IPAll)
          foreach ($ip in $tcp.IPAddresses) {
              $ip.IPAddressProperties["TcpPort"].Value = "1433"
          }

          # Apply configuration
          $tcp.Alter()

          # You need to restart SQL Server for the change to persist
          # -Force takes care of any dependent services, like SQL Agent.
          # Note: If the instance is named, replace MSSQLSERVER with MSSQL$ followed by
          # the name of the instance (e.g., MSSQL$MYINSTANCE)

          Restart-Service -Name 'MSSQL$SQLEXPRESS' -Force

          & "C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\110\Tools\Binn\SQLCMD.EXE"  -S .\SQLEXPRESS -Q "ALTER LOGIN sa ENABLE; ALTER LOGIN sa WITH PASSWORD = 'mypassword@2025';"
          Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Microsoft SQL Server\MSSQL12.SQLEXPRESS\MSSQLServer" -Name LoginMode -Value 2
          Restart-Service -Name 'MSSQL$SQLEXPRESS' -Force

          New-NetFirewallRule -DisplayName "Allow SQL Server 1433" `
            -Direction Inbound `
            -Protocol TCP `
            -LocalPort 1433 `
            -Action Allow

          Stop-Transcript
          
          # mongodb 
          Start-Transcript -Path "C:\mongodb.log" -Append

          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          choco install mongodb -y
          choco install mongodb-shell -y
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/mongod.cfg -OutFile "C:\Program Files\MongoDB\Server\8.2\bin\mongod.cfg"
          Restart-Service MongoDB
          New-NetFirewallRule -DisplayName "Allow MongoDB 27017" `
            -Direction Inbound `
            -Protocol TCP `
            -LocalPort 27017 `
            -Action Allow

          Stop-Transcript
          
          </powershell>
          
  # end database server

  # begin web server, mail server #7 #8
  WebServerMailServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow RDP access & http(s) & mail
      SecurityGroupIngress: # Allow RDP
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow http
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow https
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow smtp
          FromPort: 25
          ToPort: 25
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow imap
          FromPort: 143
          ToPort: 143
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # default VPC

  WebServerMailServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref WebServerMailServerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: WebServerMailServer
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          # web server
          Start-Transcript -Path "C:\WebServer.log" -Append

          Install-WindowsFeature -Name Web-Server -IncludeManagementTools
          # Install-WindowsFeature -Name Web-Asp-Net45, Web-Net-Ext45
          # Install-WindowsFeature -Name Web-Mgmt-Console
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/static/devspeed.html -OutFile "C:\inetpub\wwwroot\index.html"

          Stop-Transcript

          # mail server
          # - apache james (smpt server [port: 25], imap server [port: 143])
          # - swaks (smpt client)
          # - thunderbird (email client)
          Start-Transcript -Path "C:\MailServer.log" -Append

          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          choco install openjdk strawberryperl thunderbird notepadplusplus telnet -y
          Invoke-WebRequest https://www.jetmore.org/john/code/swaks/files/swaks-20240103.0/swaks -OutFile swaks.pl
          Invoke-WebRequest https://dlcdn.apache.org/james/server/3.9.0/james-server-spring-app-3.9.0-app.zip -OutFile james-server-spring-app-3.9.0-app.zip
          Expand-Archive james-server-spring-app-3.9.0-app.zip -DestinationPath james-server-spring-app-3.9.0-app

          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/smtpserver.xml -OutFile "james-server-spring-app-3.9.0-app\james-server-spring-app-3.9.0\conf\smtpserver.xml"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/config/imapserver.xml -OutFile "james-server-spring-app-3.9.0-app\james-server-spring-app-3.9.0\conf\imapserver.xml"

          Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
          refreshenv

          # cd "james-server-spring-app-3.9.0-app\james-server-spring-app-3.9.0\bin\"

          $james = "C:\Windows\System32\james-server-spring-app-3.9.0-app\james-server-spring-app-3.9.0\bin\james.bat"
          $james_cli = "C:\Windows\System32\james-server-spring-app-3.9.0-app\james-server-spring-app-3.9.0\bin\james-cli.ps1"

          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/scripts/james-cli.ps1 -OutFile $james_cli
          
          function Wait-JamesReady {
              param(
                  [int]$Port = 9999,
                  [string]$Url = "localhost",
                  [int]$TimeoutSeconds = 120
              )
          
              $start = Get-Date
          
              Write-Host "Waiting for James server to open JMX on port $Port..."
          
              while ((Get-Date) -lt $start.AddSeconds($TimeoutSeconds)) {
                  if ((Test-NetConnection -ComputerName $Url -Port $Port -WarningAction SilentlyContinue).TcpTestSucceeded) {
                      Write-Host "James server is ready!"
                      return
                  }
          
                  Start-Sleep -Seconds 2
              }
          
              throw "Timeout: James server did not open JMX port $Port"
          }

          & $james install
          & $james start
          
          # need to wait james server completely ready
          Wait-JamesReady
          
          & $james_cli -username james-admin -password changeme adddomain example.local
          & $james_cli -username james-admin -password changeme adduser mike@example.local mike
          & $james_cli -username james-admin -password changeme adduser joe@example.local joe
          & $james_cli -username james-admin -password changeme adduser leng@example.local leng
          & $james_cli -username james-admin -password changeme adduser jame@example.local jame


          New-NetFirewallRule -DisplayName "Allow smtp 25" -Direction Inbound -Protocol TCP -LocalPort 25 -Action Allow
          New-NetFirewallRule -DisplayName "Allow imap 143" -Direction Inbound -Protocol TCP -LocalPort 143 -Action Allow

          Stop-Transcript
          </powershell>
  # end web server, mail server
  
  # begin ftp server, backup servcer #13 #10
  MyEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  MyEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref FTPServerBackupServerInstance
      EIP: !Ref MyEIP
  FTPServerBackupServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow RDP access & ftp
      SecurityGroupIngress: # Allow RDP
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow ftp
          FromPort: 21
          ToPort: 21
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Allow passive ftp
          FromPort: 50000
          ToPort: 51000
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # default VPC

  FTPServerBackupServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref FTPServerBackupServerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: FTPServerBackupServer
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          # ftp server
          Start-Transcript -Path "C:\FtpServer.log" -Append

          #Install IIS Feature
          Install-WindowsFeature -Name Web-Server -IncludeManagementTools

          #Install FTP feature
          Install-WindowsFeature -Name Web-Ftp-Server -IncludeAllSubFeature -IncludeManagementTools -Verbose

          #Creating new FTP site
          $SiteName = "Demo FTP Site"
          $RootFolderpath = "C:\inetpub\ftproot"
          $PortNumber = 21
          $FTPUserGroupName = "Demo FTP Users Group"
          $FTPUserName = "jame"
          $FTPPassword = ConvertTo-SecureString "Mypassword@2025" -AsPlainText -Force

          if (!(Test-Path $RootFolderpath)) {
              # if the folder doesn't exist
              New-Item -Path $RootFolderpath -ItemType Directory # create the folder
          }

          New-WebFtpSite -Name $SiteName -PhysicalPath $RootFolderpath -Port $PortNumber -Verbose -Force

          #Creating the local Windows group
          if (!(Get-LocalGroup $FTPUserGroupName  -ErrorAction SilentlyContinue)) {
              #if the group doesn't exist
              New-LocalGroup -Name $FTPUserGroupName `
                  -Description "Members of this group can connect to FTP server" #create the group
          }

          # Creating an FTP user
          If (!(Get-LocalUser $FTPUserName -ErrorAction SilentlyContinue)) {
              New-LocalUser -Name $FTPUserName -Password $FTPPassword `
                  -Description "User account to access FTP server" `
                  -UserMayNotChangePassword
          }

          # Add the created FTP user to the group Demo FTP Users Group
          Add-LocalGroupMember -Name $FTPUserGroupName -Member $FTPUserName -ErrorAction SilentlyContinue

          # Enabling basic authentication on the FTP site
          $param = @{
              Path    = 'IIS:\Sites\Demo FTP Site'
              Name    = 'ftpserver.security.authentication.basicauthentication.enabled'
              Value   = $true
              Verbose = $True
          }
          Set-ItemProperty @param

          # Adding authorization rule to allow FTP users
          # in the FTP group to access the FTP site
          $param = @{
              PSPath   = 'IIS:\'
              Location = $SiteName
              Filter   = '/system.ftpserver/security/authorization'
          #    Value    = @{ accesstype = 'Allow'; roles = $FTPUserGroupName; permissions = 1 }
              Value    = @{ accesstype = 'Allow'; roles = $FTPUserGroupName; permissions = 3 }
          }

          Add-WebConfiguration @param

          # Changing SSL policy of the FTP site
          'ftpServer.security.ssl.controlChannelPolicy', 'ftpServer.security.ssl.dataChannelPolicy' |
          ForEach-Object {
              Set-ItemProperty -Path "IIS:\Sites\Demo FTP Site" -Name $_ -Value $false
          }

          # can be 'ReadAndExecute', 'Modify'
          $ACLObject = Get-Acl -Path $RootFolderpath
          $ACLObject.SetAccessRule(
              ( # Access rule object
                  New-Object System.Security.AccessControl.FileSystemAccessRule(
                      $FTPUserGroupName,
                      'FullControl',
                      'ContainerInherit,ObjectInherit',
                      'None',
                      'Allow'
                  )
              )
          )
          Set-Acl -Path $RootFolderpath -AclObject $ACLObject

          # Checking the NTFS permissions on the FTP root folder
          Get-Acl -Path $RootFolderpath | ForEach-Object Access

          # Test FTP Port and FTP access
          Test-NetConnection -ComputerName localhost -Port 21


          Set-WebConfigurationProperty -pspath 'MACHINE/WEBROOT/APPHOST'  -filter "system.ftpServer/firewallSupport" -name "lowDataChannelPort" -value 50000
          Set-WebConfigurationProperty -pspath 'MACHINE/WEBROOT/APPHOST'  -filter "system.ftpServer/firewallSupport" -name "highDataChannelPort" -value 51000

          Set-WebConfigurationProperty -pspath 'MACHINE/WEBROOT/APPHOST' -filter "system.applicationHost/sites/site[@name='Demo FTP Site']/ftpServer/firewallSupport" -name "externalIp4Address" -value "${MyEIP}"

          # Control port
          New-NetFirewallRule -DisplayName "Allow FTP 21" -Direction Inbound -Protocol TCP -LocalPort 21 -Action Allow

          # Passive ports
          New-NetFirewallRule -DisplayName "Allow FTP Passive Ports" -Direction Inbound -Protocol TCP -LocalPort 50000-51000 -Action Allow

          Restart-Service FTPSVC

          # C:\Windows\System32\config\systemprofile\AppData\Local\Temp\EC2Launch380802110\UserScript.ps1
          # apple

          echo hello > "C:\inetpub\ftproot\hello.txt"

          Stop-Transcript
          
          # backup server
          Start-Transcript -Path "C:\BackupServer.log" -Append
          
          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
          choco install awscli -y
          
          Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
          refreshenv
          
          $bucket = (New-Guid).ToString()
          echo $bucket > "C:\bucket.txt"
          
          aws s3 mb "s3://$bucket"
          
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/scripts/S3Backup.ps1 -OutFile "C:\S3Backup.ps1"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/scripts/S3BackupSchedule.ps1 -OutFile "C:\S3BackupSchedule.ps1"
          Invoke-WebRequest https://raw.githubusercontent.com/james5635/windows_server_assignment/refs/heads/main/scripts/S3BackupScheduleNightly.ps1 -OutFile "C:\S3BackupScheduleNightly.ps1"
          
          & "C:\S3BackupSchedule.ps1"
          & "C:\S3BackupScheduleNightly.ps1"
          
          Stop-Transcript
          
          </powershell>
  # end ftp server, backup server

  
  # begin docker, load balancing #14 #11
  # manually configure load balancing
  DockerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow RDP access & http
      SecurityGroupIngress: # Allow RDP
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # allow http
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # default VPC

  DockerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref DockerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: Docker
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          
          # additional web server for load balancing
          Start-Transcript -Path "C:\WebServer.log" -Append
          Install-WindowsFeature -Name Web-Server
          # echo "Server 1" > C:\inetpub\wwwroot\index.html
          Stop-Transcript
          
          # docker
          Start-Transcript -Path "C:\Docker.log" -Append
          Invoke-WebRequest -UseBasicParsing "https://raw.githubusercontent.com/microsoft/Windows-Containers/Main/helpful_tools/Install-DockerCE/install-docker-ce.ps1" -o install-docker-ce.ps1
          .\install-docker-ce.ps1
          # will restart the machine
          Stop-Transcript
          
          </powershell>
  # end docker, load balancing

  # begin domain controller, failover cluster #15 #12
  # https://youtu.be/-4z-5dSvRoE?si=3HVHD9stgbfQgF_2 => How to allow RDP Access to a Domain Controller for Non-admin Users
  # allow all tcp, all udp, all icmp => other windows ec2 can join domain
  DomainControllerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow RDP access, all tcp, all udp, all icmp
      SecurityGroupIngress: # Allow RDP
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # allow http
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # All TCP ports
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # All UDP ports
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp # All ICMP
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      VpcId: !Ref AWS::NoValue # default VPC

  DomainControllerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      ImageId: !Ref WindowsAmi
      SecurityGroupIds:
        - !Ref DomainControllerSG
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 35
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: DomainController
        - Key: Environment
          Value: Development
      UserData:
        Fn::Base64: !Sub |
          <powershell>
          
          # domain controller
          Start-Transcript -Path "C:\DomainController.log" -Append
          Install-WindowsFeature -Name AD-Domain-Services -IncludeManagementTools
          Install-ADDSForest -DomainName "example.local" -InstallDNS -SafeModeAdministratorPassword (ConvertTo-SecureString "Mypassword@2025" -AsPlainText -Force) -NoRebootOnCompletion -Force  
          # Get-Service adws,kdc,netlogon,dns
          Restart-Computer
          Stop-Transcript
         
          </powershell>
  # end domain controller, failover cluster

Outputs:
  # file server #1
  FileServerPublicDNS:
    Description: File Server Public DNS
    Value: !GetAtt FileServerDNSServerInstance.PublicDnsName
  SharePath:
    Description: SMB Share Path
    Value: "\\\\${FileServerDNSServerInstance.PublicDnsName}\\PublicShare"

  # dns server #3
  DNSServerPublicIP:
    Description: Public IP of DNS Server
    Value: !GetAtt FileServerDNSServerInstance.PublicIp
  DNSServerPublicDNS:
    Description: DNS Server Public DNS
    Value: !GetAtt FileServerDNSServerInstance.PublicDnsName

  # proxy server #2
  ProxyServerPublicDNS:
    Description: Proxy Server Public DNS
    Value: !GetAtt ProxyServerDHCPServerInstance.PublicDnsName
  ProxyServerPrivateIP:
    Description: Proxy Server Private IP
    Value: !GetAtt ProxyServerDHCPServerInstance.PrivateIp

  # dhcp server #4
  DHCPPublicDNS:
    Description: DHCP Server Public DNS
    Value: !GetAtt ProxyServerDHCPServerInstance.PublicDnsName
  DHCPPrivateIP:
    Description: DHCP Server Private IP
    Value: !GetAtt ProxyServerDHCPServerInstance.PrivateIp

  # terminal server #6
  TerminalServerPublicIP:
    Description: Public IP of Terminal Server
    Value: !GetAtt TerminalServerVPNServerInstance.PublicIp
  TerminalServerPublicDNS:
    Description: Public DNS of Terminal Server
    Value: !GetAtt TerminalServerVPNServerInstance.PublicDnsName
  RDPConnection:
    Description: Use this to connect via Remote Desktop
    Value: !Sub "RDP to: ${TerminalServerVPNServerInstance.PublicDnsName}"

  # vpn server #5
  VPNServerPublicIP:
    Description: Public IP of VPN Server
    Value: !GetAtt TerminalServerVPNServerInstance.PublicIp

  # database server #9
  PostgreSQLPublicIP:
    Description: Public IP of PostgreSQL
    Value: !GetAtt DatabaseInstance.PublicIp
  SQLServerPublicIP:
    Description: Public IP of SQLServer with port 1433
    Value: !GetAtt DatabaseInstance.PublicIp
  MongoDBPublicIP:
    Description: Public IP of MongoDB
    Value: !GetAtt DatabaseInstance.PublicIp

  # web server #7
  WebServerPublicIP:
    Description: Public IP of Web Server
    Value: !GetAtt WebServerMailServerInstance.PublicIp
  WebServerPublicDNS:
    Description: Web Server Public DNS
    Value: !GetAtt WebServerMailServerInstance.PublicDnsName

  # mail server #8
  MailServerPublicIP:
    Description: Public IP of Mail Server
    Value: !GetAtt WebServerMailServerInstance.PublicIp
  MailServerPublicDNS:
    Description: Mail Server Public DNS
    Value: !GetAtt WebServerMailServerInstance.PublicDnsName

  # ftp server #13
  FTPServerPublicIP:
    Description: Public IP of FTP Server
    Value: !GetAtt FTPServerBackupServerInstance.PublicIp
  FTPServerPublicDNS:
    Description: FTP Server Public DNS
    Value: !GetAtt FTPServerBackupServerInstance.PublicDnsName
    
  # backup server #10
  BackupServerPublicIP:
    Description: Public IP of Backup Server
    Value: !GetAtt FTPServerBackupServerInstance.PublicIp
  BackupServerPublicDNS:
    Description: Backup Server Public DNS
    Value: !GetAtt FTPServerBackupServerInstance.PublicDnsName

  # docker #14
  DockerPublicIP:
    Description: Public IP of Docker
    Value: !GetAtt DockerInstance.PublicIp
  DockerPublicDNS:
    Description: Docker Public DNS
    Value: !GetAtt DockerInstance.PublicDnsName
    
  # domain controller #15
  DomainControllerPublicIP:
    Description: Public IP of Domain Controller
    Value: !GetAtt DomainControllerInstance.PublicIp
  DomainControllerPublicDNS:
    Description: Domain Controller Public DNS
    Value: !GetAtt DomainControllerInstance.PublicDnsName
  DomainControllerPrivateIP:
    Description: Domain Controller Private IP
    Value: !GetAtt DomainControllerInstance.PrivateIp
